--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.20.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
   }
